--- a/public/404.html
+++ b/public/404.html
@@ -79,7 +79,7 @@
         <footer class="footer">
     
         <span>
-            © 2025 BSides Singapore
+            © 2025 BSides Singapore, built with Hugo and Nightfall theme
         </span>
     
 </footer>
