--- a/public/about/index.html
+++ b/public/about/index.html
@@ -133,7 +133,7 @@ About | BSides Singapore
         <footer class="footer">
     
         <span>
-            © 2025 BSides Singapore
+            © 2025 BSides Singapore, Built with Hugo using Nightfall theme
         </span>
     
 </footer>
