--- a/public/call-for-organizers/index.html
+++ b/public/call-for-organizers/index.html
@@ -129,7 +129,7 @@ Call for Organizers | BSides Singapore
         <footer class="footer">
     
         <span>
-            © 2025 BSides Singapore
+            © 2025 BSides Singapore, Built with Hugo using Nightfall theme
         </span>
     
 </footer>
