--- a/public/coc/index.html
+++ b/public/coc/index.html
@@ -108,7 +108,7 @@ Code of Conduct | BSides Singapore
         <footer class="footer">
     
         <span>
-            © 2025 BSides Singapore
+            © 2025 BSides Singapore, Built with Hugo using Nightfall theme
         </span>
     
 </footer>
