--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
         <footer class="footer">
     
         <span>
-            © 2025 BSides Singapore
+            © 2025 BSides Singapore, built with Hugo and Nightfall theme
         </span>
     
 </footer>
